removed save() from onDisable method to allow handchanges while reloading

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <outputDirectory>C:\Users\Chris\Documents\MinecraftPlugins\Server\plugins</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
