--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,5 @@ name: MLGFightRemastered
 version: '${project.version}'
 main: de.chrisvary.mlgfightremastered.Main
 api-version: '1.20'
+commands:
+  mlgfight:
